--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: hchorfi <hchorfi@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2019/10/13 23:08:49 by hchorfi           #+#    #+#              #
-#    Updated: 2020/10/15 12:54:09 by hchorfi          ###   ########.fr        #
+#    Updated: 2020/10/16 19:01:37 by hchorfi          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -21,6 +21,7 @@ SRC = ft_memset.c ft_bzero.c ft_memcpy.c ft_memccpy.c ft_memchr.c\
 	  ft_calloc.c ft_strdup.c ft_putchar_fd.c ft_putstr_fd.c ft_substr.c\
 	  ft_strjoin.c ft_strtrim.c ft_split.c ft_itoa.c ft_strmapi.c\
 	  ft_putendl_fd.c ft_putnbr_fd.c ft_memmove.c ft_strlcat.c\
+	  ft_lstnew.c ft_lstadd_front.c ft_lstsize.c\
 
 BSRC = ft_lstnew_bonus.c ft_lstadd_front_bonus.c ft_lstsize_bonus.c
 
@@ -35,6 +36,7 @@ OBG = ft_memset.o ft_bzero.o ft_memcpy.o ft_memccpy.o ft_memchr.o\
 	  ft_calloc.o ft_strdup.o ft_putchar_fd.o ft_putstr_fd.o ft_substr.o\
 	  ft_strjoin.o ft_strtrim.o ft_split.o ft_itoa.o ft_strmapi.o\
 	  ft_putendl_fd.o ft_putnbr_fd.o ft_memmove.o ft_strlcat.o\
+	  ft_lstnew.o ft_lstadd_front.o ft_lstsize.o\
 
 BOBG = ft_lstnew_bonus.o ft_lstadd_front_bonus.o ft_lstsize_bonus.o
 
