--- a/cub3d/Makefile
+++ b/cub3d/Makefile
@@ -52,19 +52,21 @@ fclean:
 	make fclean -C $(LIBFT_PATH)
 
 re: fclean all
+
+bounus:
 	
 #Render the project
-rlinux:
-	gcc $(FLAGS) -c $(SRCS)
-	make -C $(LIBFT_PATH)
-	gcc -I /usr/local/include $(OBJS) -L $(MLX_PATH) -l$(MLX_LIB) -L $(LIBFT_PATH) -l$(LIBFT_LIB) -lm -lbsd -lX11 -lXext -g -fsanitize=address
-	#gcc -g -I /usr/local/include *.c -L. -lftprintf -lft -L /usr/local/lib -lmlx -lm -lbsd -lX11 -lXext
+#rlinux:
+#	gcc $(FLAGS) -c $(SRCS)
+#	make -C $(LIBFT_PATH)
+#	gcc -I /usr/local/include $(OBJS) -L $(MLX_PATH) -l$(MLX_LIB) -L $(LIBFT_PATH) -l$(LIBFT_LIB) -lm -lbsd -lX11 -lXext -g -fsanitize=address
+#	gcc -g -I /usr/local/include *.c -L. -lftprintf -lft -L /usr/local/lib -lmlx -lm -lbsd -lX11 -lXext
 
-rmac:
-	gcc -g -I /usr/local/include *.c -L. -lftprintf -lft -L /usr/local/lib -lmlx -framework OpenGL -framework Appkit
+#rmac:
+#	gcc -g -I /usr/local/include *.c -L. -lftprintf -lft -L /usr/local/lib -lmlx -framework OpenGL -framework Appkit
 
  
 ##cc -g -I /user/local/inclue main.c -L /usr/local/lib/ -lmlx -framework OpenGL \
 	-framework Appkit -fsanitize=address
-leaks:
-	./compile.sh 2 LC cub3d.c gcc readfile1.c screenshot.c readfile2.c readfile3.c sprite.c raycasting1.c raycasting2.c utils1.c utils2.c error.c render2d.c render3d.c mlx_utils.c textures.c map1.c get_next_line.c get_next_line_utils.c libft/*.c -o cub3d -L $(MLX_PATH) -lmlx -framework OpenGL -framework AppKit
+#leaks:
+#	./compile.sh 2 LC cub3d.c gcc readfile1.c screenshot.c readfile2.c readfile3.c sprite.c raycasting1.c raycasting2.c utils1.c utils2.c error.c render2d.c render3d.c mlx_utils.c textures.c map1.c get_next_line.c get_next_line_utils.c libft/*.c -o cub3d -L $(MLX_PATH) -lmlx -framework OpenGL -framework AppKit
