--- a/ft_services/srcs/nginx/Dockerfile
+++ b/ft_services/srcs/nginx/Dockerfile
@@ -1,4 +1,13 @@
 FROM alpine
-COPY ./srcs/nginx/nginx.sh /
-RUN sh nginx.sh
-EXPOSE 80
+COPY install.sh /
+COPY nginx.conf /
+COPY index.html /
+COPY nginx-selfsigned.crt /
+COPY nginx-selfsigned.key /
+COPY sshd_config /
+COPY services.sh /
+RUN sh install.sh
+EXPOSE 80 443 22
+VOLUME [ "/sys/fs/cgroup" ]
+ENTRYPOINT [ "sh", "services.sh" ]
+#CMD ["/usr/sbin/sshd","-D"]
