--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
 			"name": "(lldb) Launch",
 			"type": "cppdbg",
 			"request": "launch",
-			"program": "/Users/hchorfi/Desktop/1337curcus/cub3d/a.out",
-			"args": ["/Users/hchorfi/Desktop/1337curcus/cub3d/map.cub"],
+			"program": "/Users/hchorfi/Desktop/42cursus/libasm/a.out",
+			"args": [""],
 			"stopAtEntry": false,
 			"cwd": "${workspaceFolder}",
 			"environment": [],
