--- a/ft_services/srcs/mysql/Dockerfile
+++ b/ft_services/srcs/mysql/Dockerfile
@@ -1,8 +1,12 @@
-FROM alpine
+FROM alpine:3.11
 VOLUME [ "/sys/fs/cgroup" ]
 COPY install.sh /
 COPY services.sh /
+COPY wpdbexport.sql /
+COPY phpmyadmin.sql /
+COPY mariadb-server.cnf /
 RUN sh install.sh
-COPY mariadb-server.cnf /etc/my.cnf.d/mariadb-server.cnf
+COPY telegraf.conf /etc/telegraf.conf
+COPY check.sh /
 EXPOSE 3306
 ENTRYPOINT [ "sh", "services.sh" ]
