--- a/ft_services/srcs/nginx/nginx.conf
+++ b/ft_services/srcs/nginx/nginx.conf
@@ -23,9 +23,6 @@ http {
 	    return 			        301 https://$host$request_uri;
         client_max_body_size    32m;
         error_page              500 502 503 504  /50x.html;
-        location = /50x.html {
-              root              /var/lib/nginx/html;
-        }
     }
 
     server {
@@ -34,5 +31,13 @@ http {
 	ssl_certificate         /etc/ssl/certs/nginx-selfsigned.crt;
     ssl_certificate_key     /etc/ssl/private/nginx-selfsigned.key;
 	root                    /www;
+	location /phpmyadmin {
+		proxy_set_header X-Forwarded-Proto https;
+		proxy_pass http://$host:5000$request_uri;
+        }
+	location /wordpress {
+		proxy_set_header X-Forwarded-Proto https;
+		return	307	http://$host:5050$request_uri;
+	}
     }
 } 
