--- a/ft_services/srcs/wordpress/Dockerfile
+++ b/ft_services/srcs/wordpress/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine
+FROM alpine:3.11
 VOLUME [ "/sys/fs/cgroup" ]
 COPY install.sh /
 COPY nginx.conf /
@@ -8,5 +8,7 @@ COPY www.conf /
 COPY php.ini /
 COPY wp-config.php /
 RUN sh install.sh
+COPY telegraf.conf /etc/telegraf.conf
+COPY check.sh /
 EXPOSE 5050
 ENTRYPOINT [ "sh", "services.sh" ]
