--- a/ft_services/srcs/mysql/mysql.yaml
+++ b/ft_services/srcs/mysql/mysql.yaml
@@ -1,3 +1,14 @@
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: mysql-pvc
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 1Gi
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -6,7 +17,7 @@ metadata:
     app: mysql
 spec:
   replicas: 1
-  selector:
+  selector:  
     matchLabels:
       app: mysql
   template:
@@ -20,12 +31,20 @@ spec:
           imagePullPolicy: Never
           ports:
             - containerPort: 3306
+          volumeMounts:
+          - name: mysql-persistent-storage
+            mountPath: /var/lib/mysql
+      volumes:
+        - name: mysql-persistent-storage
+          persistentVolumeClaim:
+            claimName: mysql-pvc
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: mysql
 spec:
+  type: ClusterIP
   selector:
     app: mysql
   ports:
@@ -33,4 +52,3 @@ spec:
     protocol: TCP
     port: 3306
     targetPort: 3306
-    type: ClusterIP
