--- a/ft_services/srcs/nginx/nginx.yaml
+++ b/ft_services/srcs/nginx/nginx.yaml
@@ -26,6 +26,8 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+  annotations:
+    metallb.universe.tf/allow-shared-ip: shared
   name: nginx
 spec:
   selector:
