--- a/ft_services/srcs/phpmyadmin/Dockerfile
+++ b/ft_services/srcs/phpmyadmin/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine
+FROM alpine:3.11
 VOLUME [ "/sys/fs/cgroup" ]
 COPY install.sh /
 COPY nginx.conf /
@@ -8,5 +8,7 @@ COPY www.conf /
 COPY php.ini /
 COPY config.inc.php /
 RUN sh install.sh
+COPY telegraf.conf /etc/telegraf.conf
+COPY check.sh /
 EXPOSE 5000
 ENTRYPOINT [ "sh", "services.sh" ]
