--- a/ft_services/srcs/influxdb/influxdb.yaml
+++ b/ft_services/srcs/influxdb/influxdb.yaml
@@ -29,6 +29,13 @@ spec:
         - name: influxdb
           image: influxdb
           imagePullPolicy: Never
+          livenessProbe:
+            exec:
+              command:
+              - sh
+              - /check.sh
+            initialDelaySeconds: 60
+            periodSeconds: 30
           ports:
             - containerPort: 8086
           volumeMounts:
