--- a/ft_services/srcs/mysql/mysql.yaml
+++ b/ft_services/srcs/mysql/mysql.yaml
@@ -29,6 +29,13 @@ spec:
         - name: mysql
           image: mysql
           imagePullPolicy: Never
+          livenessProbe:
+            exec:
+              command:
+              - sh
+              - /check.sh
+            initialDelaySeconds: 10
+            periodSeconds: 5
           ports:
             - containerPort: 3306
           volumeMounts:
