--- a/ft_services/srcs/phpmyadmin/pma.yaml
+++ b/ft_services/srcs/phpmyadmin/pma.yaml
@@ -18,6 +18,13 @@ spec:
         - name: phpmyadmin
           image: phpmyadmin
           imagePullPolicy: Never
+          livenessProbe:
+            exec:
+              command:
+              - sh
+              - /check.sh
+            initialDelaySeconds: 60
+            periodSeconds: 30
           ports:
             - containerPort: 5000
 ---
