--- a/ft_services/srcs/ftps/vsftpd.conf
+++ b/ft_services/srcs/ftps/vsftpd.conf
@@ -12,14 +12,14 @@
 anonymous_enable=NO
 #
 # Uncomment this to allow local users to log in.
-#local_enable=YES
+local_enable=YES
 #
 # Uncomment this to enable any form of FTP write command.
-#write_enable=YES
+write_enable=YES
 #
 # Default umask for local users is 077. You may wish to change this to 022,
 # if your users expect that (022 is used by most other ftpd's)
-#local_umask=022
+local_umask=022
 #
 # Uncomment this to allow the anonymous FTP user to upload files. This only
 # has an effect if the above global write enable is activated. Also, you will
@@ -81,7 +81,7 @@ connect_from_port_20=YES
 #ascii_download_enable=YES
 #
 # You may fully customise the login banner string:
-#ftpd_banner=Welcome to blah FTP service.
+ftpd_banner=Welcome to blah FTP service.
 #
 # You may specify a file of disallowed anonymous e-mail addresses. Apparently
 # useful for combatting certain DoS attacks.
@@ -95,7 +95,7 @@ connect_from_port_20=YES
 # (Warning! chroot'ing can be very dangerous. If using chroot, make sure that
 # the user does not have write access to the top level directory within the
 # chroot)
-#chroot_local_user=YES
+chroot_local_user=YES
 #chroot_list_enable=YES
 # (default follows)
 #chroot_list_file=/etc/vsftpd.chroot_list
@@ -114,20 +114,13 @@ listen=YES
 # This directive enables listening on IPv6 sockets. To listen on IPv4 and IPv6
 # sockets, you must run two copies of vsftpd with two configuration files.
 # Make sure, that one of the listen options is commented !!
-#listen_ipv6=YES
-local_enable=YES
-chroot_local_user=YES
+listen_ipv6=NO
 allow_writeable_chroot=YES
 background=NO
-ftpd_banner=Welcome to FTP Server
-dirmessage_enable=YES
 max_clients=10
 max_per_ip=5
-write_enable=YES
-local_umask=022
 passwd_chroot_enable=yes
 pasv_enable=Yes
-listen_ipv6=NO
 seccomp_sandbox=NO
 pasv_max_port=21100
 pasv_min_port=21100
