--- a/minishell/Makefile
+++ b/minishell/Makefile
@@ -4,7 +4,7 @@ NAME = minishell
 LIBFT_PATH = ./libft
 LIBFT_LIB = ft
 
-SRCS = main.c get_next_line.c get_next_line_utils.c export.c
+SRCS = main.c get_next_line.c get_next_line_utils.c export.c env.c unset.c
 
 FLAGS = -Werror -Wextra -Wall
 
@@ -13,7 +13,7 @@ ASAN = -g -fsanitize=address
 $(NAME) :
 	#make -C $(LIBFT_PATH)
 	#gcc -g $(SRCS) -L $(LIBFT_PATH) -l$(LIBFT_LIB) -o $(NAME)
-	gcc -g $(ASAN) $(SRCS) libft.a -o $(NAME)
+	gcc -g $(ASAN) $(SRCS) libft.a libftprintf.a -o $(NAME)
 	
 all: $(NAME)
 
