--- a/minishell/Makefile
+++ b/minishell/Makefile
@@ -4,7 +4,7 @@ NAME = minishell
 LIBFT_PATH = ./libft
 LIBFT_LIB = ft
 
-SRCS = main.c get_next_line.c get_next_line_utils.c export.c env.c unset.c pwd.c cd.c bin.c parse/split.c echo.c exit.c
+SRCS = main.c get_next_line.c get_next_line_utils.c export.c env.c unset.c pwd.c cd.c bin.c parse/split.c echo.c exit.c term.c
 
 FLAGS = -Werror -Wextra -Wall
 
@@ -12,7 +12,7 @@ ASAN =  -g -fsanitize=address
 $(NAME) :
 	#make -C $(LIBFT_PATH)
 	#gcc -g $(SRCS) -L $(LIBFT_PATH) -l$(LIBFT_LIB) -o $(NAME)
-	gcc -g $(ASAN) $(SRCS) libft/libft.a ft_printf/libftprintf.a -o $(NAME)
+	gcc -g $(ASAN) $(SRCS) libft/libft.a ft_printf/libftprintf.a -lncurses -o $(NAME)
 	
 all: $(NAME)
 
