--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
 			"type": "lldb",
 			"request": "launch",
 			"name": "Debug",
-			"program": "${workspaceFolder}/minishell",
+			"program": "${workspaceFolder}/minishell/minishell",
 			"args": [],
 			"cwd": "${workspaceFolder}"
 		}
