--- a/minishell/Makefile
+++ b/minishell/Makefile
@@ -20,7 +20,6 @@ SRCS = main.c\
 		echo.c\
 		exit.c\
 		term.c\
-		parse/omary.c\
 		utils1.c\
 		utils2.c\
 		redirections.c\
@@ -30,7 +29,7 @@ SRCS = main.c\
 
 FLAGS = -Werror -Wextra -Wall
 
-ASAN =  -g #-fsanitize=address
+ASAN =  -g -fsanitize=address
 $(NAME) :
 	#make -C $(LIBFT_PATH)
 	#gcc -g $(SRCS) -L $(LIBFT_PATH) -l$(LIBFT_LIB) -o $(NAME)
