--- a/minishell/Makefile
+++ b/minishell/Makefile
@@ -31,7 +31,7 @@ SRCS = main.c\
 
 FLAGS = -Werror -Wextra -Wall
 
-ASAN =  -g #-fsanitize=address
+ASAN =  -g -fsanitize=address
 $(NAME) :
 	#make -C $(LIBFT_PATH)
 	#gcc -g $(SRCS) -L $(LIBFT_PATH) -l$(LIBFT_LIB) -o $(NAME)
