--- a/minishell/Makefile
+++ b/minishell/Makefile
@@ -1,8 +1,18 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: hchorfi <hchorfi@student.1337.ma>          +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2021/05/06 14:33:51 by hchorfi           #+#    #+#              #
+#    Updated: 2021/05/06 14:39:56 by hchorfi          ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
 
 NAME = minishell
 
 LIBFT_PATH = ./libft
-LIBFT_LIB = ft
 
 SRCS = main.c\
 		export.c\
@@ -37,8 +47,7 @@ FLAGS = -Werror -Wextra -Wall
 
 ASAN =  -g #-fsanitize=address
 $(NAME) :
-	#make -C $(LIBFT_PATH)
-	#gcc -g $(SRCS) -L $(LIBFT_PATH) -l$(LIBFT_LIB) -o $(NAME)
+	make -C $(LIBFT_PATH)
 	gcc -g $(ASAN) $(SRCS) libft/libft.a ft_printf/libftprintf.a -lncurses -o $(NAME)
 	
 all: $(NAME)
@@ -47,10 +56,10 @@ rebuild:
 	make re -C libft ; make re -C ft_printf ; make re
 
 clean:
-	#make clean -C $(LIBFT_PATH)
+	make clean -C $(LIBFT_PATH)
 
 fclean:
 	rm -rf $(NAME)
-	#make fclean -C $(LIBFT_PATH)
+	make fclean -C $(LIBFT_PATH)
 
 re: fclean all
